update logo and fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -3,37 +3,38 @@
 @import "tw-animate-css";
 
 :root {
-  --background: oklch(0.88 0.04 27.81);
-  --foreground: oklch(0.33 0.04 64);
-  --card: oklch(0.96 0 0);
-  --card-foreground: oklch(0.33 0.04 64);
-  --popover: oklch(0.96 0 0);
-  --popover-foreground: oklch(0.33 0.04 64);
-  --primary: oklch(0.61 0.19 33.29);
-  --primary-foreground: oklch(0.95 0.01 36.7);
-  --secondary: oklch(0.96 0 0);
-  --secondary-foreground: oklch(0.33 0.04 64);
-  --muted: oklch(0.92 0.02 25.25);
-  --muted-foreground: oklch(0.55 0.02 40.73);
-  --accent: oklch(0.84 0.06 34.71);
-  --accent-foreground: oklch(0.21 0.01 43.08);
-  --destructive: oklch(0.64 0.21 25.39);
-  --border: oklch(0.95 0.01 36.7);
-  --input: oklch(0.92 0 0);
-  --ring: oklch(0.61 0.19 33.29);
-  --chart-1: oklch(0.65 0.15 58.78);
-  --chart-2: oklch(0.6 0.11 184.09);
-  --chart-3: oklch(0.4 0.07 227.04);
-  --chart-4: oklch(0.83 0.17 80.74);
-  --chart-5: oklch(0.77 0.17 65.49);
-  --sidebar: oklch(0.96 0 0);
-  --sidebar-foreground: oklch(0.33 0.04 64);
-  --sidebar-primary: oklch(0.65 0.15 58.78);
-  --sidebar-primary-foreground: oklch(0.98 0.02 80.1);
-  --sidebar-accent: oklch(0.84 0.06 34.71);
-  --sidebar-accent-foreground: oklch(0.21 0.01 43.08);
-  --sidebar-border: oklch(0.92 0 0);
-  --sidebar-ring: oklch(0.65 0.15 58.78);
+  --background: oklch(0.9303 0.0498 93.3970);
+  --foreground: oklch(0.3211 0.0503 268.0042);
+  --card: oklch(0.9612 0 0);
+  --card-foreground: oklch(0.3211 0.0503 268.0042);
+  --popover: oklch(0.9612 0 0);
+  --popover-foreground: oklch(0.3211 0.0503 268.0042);
+  --primary: oklch(0.7057 0.1184 204.0721);
+  --primary-foreground: oklch(0.9612 0 0);
+  --secondary: oklch(0.8677 0.0667 203.1254);
+  --secondary-foreground: oklch(0.4001 0.0424 268.5214);
+  --muted: oklch(0.9310 0 0);
+  --muted-foreground: oklch(0.4386 0 0);
+  --accent: oklch(0.9324 0.0346 203.2853);
+  --accent-foreground: oklch(0.3211 0.0503 268.0042);
+  --destructive: oklch(0.6598 0.1899 23.9148);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --border: oklch(0.3211 0.0503 268.0042);
+  --input: oklch(0.4386 0 0);
+  --ring: oklch(0.3211 0.0503 268.0042);
+  --chart-1: oklch(0.7057 0.1184 204.0721);
+  --chart-2: oklch(0.5994 0.1001 203.5949);
+  --chart-3: oklch(0.4881 0.0808 202.8399);
+  --chart-4: oklch(0.3675 0.0603 204.7550);
+  --chart-5: oklch(0.2386 0.0377 203.7129);
+  --sidebar: oklch(0.9612 0 0);
+  --sidebar-foreground: oklch(0.3211 0.0503 268.0042);
+  --sidebar-primary: oklch(0.7057 0.1184 204.0721);
+  --sidebar-primary-foreground: oklch(0.9612 0 0);
+  --sidebar-accent: oklch(0.9324 0.0346 203.2853);
+  --sidebar-accent-foreground: oklch(0.3211 0.0503 268.0042);
+  --sidebar-border: oklch(0.9612 0 0);
+  --sidebar-ring: oklch(0.3211 0.0503 268.0042);
 
   --font-sans: "Geist", "Geist Fallback", ui-sans-serif, system-ui,
     -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
